@@ -1,6 +1,8 @@
 [2.0.3]
 - Added a new sensitivity mode that is between the default mode and the sensitive mode
   in sensitivity (option `--mid-sensitive`).
+- Added counters for total number of reference blocks, shapes and index chunks to
+  the status messages.
 - Fixed a bug that could cause secondary HSPs within one target not to be reported
   if the `--max-hsps` option was used with a non-default setting.
 
